# kommandozeilen_argumente

./: .gitignore  Cargo.toml  ChangeLog.md  LIESMICH.md  README.md
examples/: derive.rs  derive_en.rs  function.rs  funktion.rs
kommandozeilen_argumente_derive/: Cargo.toml
kommandozeilen_argumente_derive/src/: enum_argument.rs  lib.rs  parse.rs  split_argumente.rs  utility.rs
src/: arg.rs  args.rs  argumente.rs  beschreibung.rs  ergebnis.rs  lib.rs  non_empty.rs  parse.rs  sprache.rs  test.rs  unicode.rs
src/arg/: flag.rs  frühes_beenden.rs  kombiniere.rs  wert.rs
src/argumente/: einzelargument.rs  flag.rs  frühes_beenden.rs  kombiniere.rs  wert.rs
test/: derive.rs
tests/: derive.rs  hilfe  hilfe.rs
