[package]
name = "kommandozeilen_argumente"
version = "0.1.0"
authors = ["spamviech <spamviech@web.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
unicode-segmentation = "1.8.0"
void = "1.0.2"

[dependencies.serde]
version = "1.0.130"
features = ["derive"]
optional = true
