[package]
name = "kommandozeilen_argumente_derive"
version = "0.1.0"
authors = ["spamviech <spamviech@web.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
