[package]
name = "kommandozeilen_argumente_derive"
version = "0.1.0"
authors = ["spamviech <spamviech@web.de>"]
edition = "2021"
license = "MIT"
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.36"
proc-macro-crate = "1.1.0"

[dependencies.syn]
version = "1.0.84"
features = ["full", "extra-traits"]
default_features = false
