[package]
name = "kommandozeilen_argumente_derive"
version = "0.2.0"
description = "derive-Macros für das kommandozeilen_argumente crate."
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.17"
proc-macro2 = "1.0.36"
unicode-segmentation = "1.8.0"

[dependencies.syn]
version = "1.0.89"
features = ["derive", "parsing", "proc-macro"]
default_features = false

[lints]
workspace = true
